force-app/main/default/objects/Booking__c/fields/Aadhaar_Uploded__c.field-meta.xml
<CustomField>
    <fullName>Aadhaar_Uploded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aadhaar Uploded</label>
    <type>Checkbox</type>
</CustomField>