force-app/main/default/objects/Booking__c/fields/Additional_Car_Parking_Amount__c.field-meta.xml
<CustomField>
    <fullName>Additional_Car_Parking_Amount__c</fullName>
    <label>Additional Car Parking Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>