force-app/main/default/objects/Booking__c/fields/Agreement_Execution_Amount__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Execution_Amount__c</fullName>
    <formula>IF(AND(NOT(ISBLANK(Total__c)), Total__c != 0), Total__c * 0.20, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agreement Execution Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>