force-app/main/default/objects/Booking__c/fields/Agreement_Execution_Date__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Execution_Date__c</fullName>
    <formula>DATEVALUE(CreatedDate) + 21 +
IF(
    TEXT(Time_Extension_Approval_Status__c) = &quot;Approved&quot;,
    Extension_Days__c,
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agreement Execution Due Date</label>
    <type>Date</type>
</CustomField>