force-app/main/default/objects/Booking__c/fields/Agreement_Extension_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Extension_Approved_Date__c</fullName>
    <label>Agreement Extension Approved Date</label>
    <type>Date</type>
</CustomField>