force-app/main/default/objects/Booking__c/fields/Agreement_Reminder_Date__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Reminder_Date__c</fullName>
    <formula>/*IF(
  AND(
    Time_Extension_Requested__c     ,
    NOT(ISBLANK(Agreement_Execution_Date__c))
  ),
   Agreement_Execution_Date__c - 6,
  NULL
)*/
Today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agreement Reminder Date</label>
    <type>Date</type>
</CustomField>