force-app/main/default/objects/Booking__c/fields/Agreement_Status__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Status__c</fullName>
    <defaultValue>&apos;Not Scheduled&apos;</defaultValue>
    <label>Agreement Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Scheduled</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Executed</fullName>
            </value>
            <value>
                <fullName>Executed &amp; Registered</fullName>
            </value>
            <value>
                <fullName>Rescheduled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>