force-app/main/default/objects/Booking__c/fields/Agreement_Value__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Value__c</fullName>
    <formula>Quote__r.Agreement_Value_Before_GST__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agreement Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>