force-app/main/default/objects/Booking__c/fields/Agreement_Value_Before_GST__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Value_Before_GST__c</fullName>
    <label>Agreement Value Before GST</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>