force-app/main/default/objects/Booking__c/fields/All_Payment_Clear__c.field-meta.xml
<CustomField>
    <fullName>All_Payment_Clear__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All Payment Clear</label>
    <type>Checkbox</type>
</CustomField>