force-app/main/default/objects/Booking__c/fields/Alternate_Contact_No__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Contact_No__c</fullName>
    <label>Alternate Contact No</label>
    <type>Phone</type>
</CustomField>