force-app/main/default/objects/Booking__c/fields/Application_Amount__c.field-meta.xml
<CustomField>
    <fullName>Application_Amount__c</fullName>
    <label>Application Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>