force-app/main/default/objects/Booking__c/fields/Approval_status__c.field-meta.xml
<CustomField>
    <fullName>Approval_status__c</fullName>
    <label>Customer Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Booking_Approval_Status</valueSetName>
    </valueSet>
</CustomField>