force-app/main/default/objects/Booking__c/fields/Banker_DSS__c.field-meta.xml
<CustomField>
    <fullName>Banker_DSS__c</fullName>
    <label>Banker DSS</label>
    <type>TextArea</type>
</CustomField>