force-app/main/default/objects/Booking__c/fields/Basement_Door_Key_No__c.field-meta.xml
<CustomField>
    <fullName>Basement_Door_Key_No__c</fullName>
    <label>Basement Door Key No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>