force-app/main/default/objects/Booking__c/fields/Basement_Door_No_of_Keys__c.field-meta.xml
<CustomField>
    <fullName>Basement_Door_No_of_Keys__c</fullName>
    <label>Basement Door No.of Keys</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>