force-app/main/default/objects/Booking__c/fields/Basic_Cost__c.field-meta.xml
<CustomField>
    <fullName>Basic_Cost__c</fullName>
    <formula>Rate_per_sqft__c * Super_Built_UpArea__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Basic Cost on SBA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>