force-app/main/default/objects/Booking__c/fields/Bescom_per_Sq_ft__c.field-meta.xml
<CustomField>
    <fullName>Bescom_per_Sq_ft__c</fullName>
    <label>Bescom per Sq.ft.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>