force-app/main/default/objects/Booking__c/fields/Bescom_STP_and_Generator_Changes__c.field-meta.xml
<CustomField>
    <fullName>Bescom_STP_and_Generator_Changes__c</fullName>
    <formula>Bescom_STP_and_Generator_per_Sq_ft__c * Super_Built_UpArea__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bescom,STP and Generator Changes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>