force-app/main/default/objects/Booking__c/fields/Bescom_STP_and_Generator_per_Sq_ft__c.field-meta.xml
<CustomField>
    <fullName>Bescom_STP_and_Generator_per_Sq_ft__c</fullName>
    <formula>Bescom_per_Sq_ft__c + Generator_Per_Sq_Ft__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bescom,STP and Generator per Sq.ft.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>