force-app/main/default/objects/Booking__c/fields/Block_Id__c.field-meta.xml
<CustomField>
    <fullName>Block_Id__c</fullName>
    <formula>CASESAFEID(  Plot__r.Block_Lookup__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Block Id</label>
    <type>Text</type>
</CustomField>