force-app/main/default/objects/Booking__c/fields/Booing_Executive_Email_Id__c.field-meta.xml
<CustomField>
    <fullName>Booing_Executive_Email_Id__c</fullName>
    <formula>Owner:User.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booing Executive Email Id</label>
    <type>Text</type>
</CustomField>