force-app/main/default/objects/Booking__c/fields/Booking_Amount_Crores__c.field-meta.xml
<CustomField>
    <fullName>Booking_Amount_Crores__c</fullName>
    <formula>&quot;₹ &quot; &amp; TEXT(ROUND(Booking_Amount__c / 10000000, 2)) &amp; &quot; Cr&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Amount (Crores)</label>
    <type>Text</type>
</CustomField>