force-app/main/default/objects/Booking__c/fields/Booking_Amount_Lakhs__c.field-meta.xml
<CustomField>
    <fullName>Booking_Amount_Lakhs__c</fullName>
    <formula>&quot;₹ &quot; &amp; TEXT(ROUND(Booking_Amount__c / 100000, 2)) &amp; &quot; L&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Amount (Lakhs)</label>
    <type>Text</type>
</CustomField>