force-app/main/default/objects/Booking__c/fields/Booking_Approval_Time__c.field-meta.xml
<CustomField>
    <fullName>Booking_Approval_Time__c</fullName>
    <label>Booking Approval Time</label>
    <type>DateTime</type>
</CustomField>