force-app/main/default/objects/Booking__c/fields/Booking_Moved_To_Booked_Stage_Time__c.field-meta.xml
<CustomField>
    <fullName>Booking_Moved_To_Booked_Stage_Time__c</fullName>
    <label>Initial CRM Executive Assigned Time</label>
    <type>DateTime</type>
</CustomField>