force-app/main/default/objects/Booking__c/fields/Booking_Summary__c.field-meta.xml
<CustomField>
    <fullName>Booking_Summary__c</fullName>
    <label>Booking Summary</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>