force-app/main/default/objects/Booking__c/fields/Building_Plan_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Building_Plan_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Building Plan Uploaded</label>
    <type>Checkbox</type>
</CustomField>