force-app/main/default/objects/Booking__c/fields/Cancellation_Agreement_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Agreement_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancellation Agreement Uploaded</label>
    <type>Checkbox</type>
</CustomField>