force-app/main/default/objects/Booking__c/fields/Cancellation_Amount__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Amount__c</fullName>
    <label>Cancellation Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>