force-app/main/default/objects/Booking__c/fields/Cancellation_Charge__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Charge__c</fullName>
    <label>Cancellation Charge</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>