force-app/main/default/objects/Booking__c/fields/Cancellation_Description__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Description__c</fullName>
    <label>Cancellation Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>