force-app/main/default/objects/Booking__c/fields/Cancellation_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancellation Email Sent</label>
    <type>Checkbox</type>
</CustomField>