force-app/main/default/objects/Booking__c/fields/Cancellation_Email_Sent_Time__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Email_Sent_Time__c</fullName>
    <label>Cancellation Email Sent Time</label>
    <type>DateTime</type>
</CustomField>