force-app/main/default/objects/Booking__c/fields/Cancellation_Letter_Sent__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Letter_Sent__c</fullName>
    <label>Cancellation Letter Sent</label>
    <type>DateTime</type>
</CustomField>