force-app/main/default/objects/Booking__c/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <label>Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Attended For Agreement</fullName>
            </value>
            <value>
                <fullName>Budget Issue</fullName>
            </value>
            <value>
                <fullName>Found a New Flat</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>