force-app/main/default/objects/Booking__c/fields/Cancellation_Status__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Status__c</fullName>
    <label>Cancellation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted For Cancellation</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Approved by CRM Head, Pending from Sales Head</fullName>
                <isActive>false</isActive>
                <label>Approved by CRM Head, Pending from Sales Head</label>
            </value>
            <value>
                <fullName>Pending</fullName>
                <isActive>false</isActive>
                <label>Pending From CRM Head</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>