force-app/main/default/objects/Booking__c/fields/Car_Parking__c.field-meta.xml
<CustomField>
    <fullName>Car_Parking__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Not in Use</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>