force-app/main/default/objects/Booking__c/fields/Car_Parking_Amount__c.field-meta.xml
<CustomField>
    <fullName>Car_Parking_Amount__c</fullName>
    <label>Car Parking Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>