force-app/main/default/objects/Booking__c/fields/Cheque_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Cheque_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cheque Uploaded</label>
    <type>Checkbox</type>
</CustomField>