force-app/main/default/objects/Booking__c/fields/Co_Applicant_Aadhar_Upload__c.field-meta.xml
<CustomField>
    <fullName>Co_Applicant_Aadhar_Upload__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Co Applicant Aadhar Upload</label>
    <type>Checkbox</type>
</CustomField>