force-app/main/default/objects/Booking__c/fields/Co_Applicant_Photo_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Co_Applicant_Photo_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Co Applicant Photo Uploaded</label>
    <type>Checkbox</type>
</CustomField>