force-app/main/default/objects/Booking__c/fields/Commencement_Certificate_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Commencement_Certificate_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Commencement Certificate Uploaded</label>
    <type>Checkbox</type>
</CustomField>