force-app/main/default/objects/Booking__c/fields/Common_Bedroom_Key_No__c.field-meta.xml
<CustomField>
    <fullName>Common_Bedroom_Key_No__c</fullName>
    <label>Common Bedroom Key No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>