force-app/main/default/objects/Booking__c/fields/Common_Bedroom_No_of_Keys__c.field-meta.xml
<CustomField>
    <fullName>Common_Bedroom_No_of_Keys__c</fullName>
    <label>Common Bedroom No.of Keys</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>