force-app/main/default/objects/Booking__c/fields/Construction_Cost__c.field-meta.xml
<CustomField>
    <fullName>Construction_Cost__c</fullName>
    <label>Construction Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>