force-app/main/default/objects/Booking__c/fields/Credit_Source__c.field-meta.xml
<CustomField>
    <fullName>Credit_Source__c</fullName>
    <formula>SLead__r.Credit_Source__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Source</label>
    <type>Text</type>
</CustomField>