force-app/main/default/objects/Booking__c/fields/Credit_Source_For_Sharing__c.field-meta.xml
<CustomField>
    <fullName>Credit_Source_For_Sharing__c</fullName>
    <label>Credit Source For Sharing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>