force-app/main/default/objects/Booking__c/fields/CRM_Executive_Contact_No__c.field-meta.xml
<CustomField>
    <fullName>CRM_Executive_Contact_No__c</fullName>
    <formula>Owner:User.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CRM Executive Contact No</label>
    <type>Text</type>
</CustomField>