force-app/main/default/objects/Booking__c/fields/Customer_Approval_Comments__c.field-meta.xml
<CustomField>
    <fullName>Customer_Approval_Comments__c</fullName>
    <label>Customer Approval Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>