force-app/main/default/objects/Booking__c/fields/DD_Uploaded_Date__c.field-meta.xml
<CustomField>
    <fullName>DD_Uploaded_Date__c</fullName>
    <label>DD Uploaded Date</label>
    <type>Date</type>
</CustomField>