force-app/main/default/objects/Booking__c/fields/Default_Interest_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Default_Interest_Percentage__c</fullName>
    <formula>IF(
TEXT(Project_Type__c) = &quot;Apartments&quot;, &apos;12&apos;,
IF(
TEXT(Project_Type__c) = &quot;Villas&quot;, &apos;18&apos;,
IF(
TEXT(Project_Type__c) = &quot;Row House&quot;, &apos;12&apos;,
NULL
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default Interest Percentage</label>
    <type>Text</type>
</CustomField>