force-app/main/default/objects/Booking__c/fields/Disable_Automatic_Agreement_Reminders__c.field-meta.xml
<CustomField>
    <fullName>Disable_Automatic_Agreement_Reminders__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Automatic Agreement Reminders</label>
    <type>Checkbox</type>
</CustomField>