force-app/main/default/objects/Booking__c/fields/Enquiry_Source__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Source__c</fullName>
    <label>Enquiry Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>