force-app/main/default/objects/Booking__c/fields/Extra_Land_Amount__c.field-meta.xml
<CustomField>
    <fullName>Extra_Land_Amount__c</fullName>
    <label>Extra Land Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>