force-app/main/default/objects/Booking__c/fields/FF_Master_bedroom_Key_No__c.field-meta.xml
<CustomField>
    <fullName>FF_Master_bedroom_Key_No__c</fullName>
    <label>Master Bedroom Key No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>