force-app/main/default/objects/Booking__c/fields/Final_NOC_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Final_NOC_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Final NOC Uploaded</label>
    <type>Checkbox</type>
</CustomField>